@@ -6,6 +6,8 @@ $Id$
 $Source$
 
 2006-04-12 Sebastian Mendel <cybot_tm@users.sourceforge.net>
+    * libraries/config.default.php:
+      added new paramter to limit maximum displayed databases
     * sql.php:
        - fixed bug #1469469 cyclic redirect with sql.php as default table-page
        - re-use already existing code
